# Experimenting

./: .gitignore  README.md  pyproject.toml
experimenting/src/experimenting/models/: ML.py  factorials.py  model.py  planetsim.py
experimenting/tests/: test_experimenting.py
