[tool.poetry]
name = "experimenting"
version = "0.1.0"
description = ""
authors = ["rugbym <94176296+rugbym@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = ">=3.9,<3.11"
numpy = "^1.22.0"
matplotlib = "^3.5.1"
gmpy2 = "^2.1.1"
scipy = "^1.7.3"
pandas = "^1.3.5"
sklearn = "^0.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
